fixed poll time option flatpickr on mobile

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -774,6 +774,9 @@
                         &.sortable-drag { opacity: 0.9 !important; }
                         display: flex;
                         width: 400px;
+                        @media (max-width:460px) {
+                            width: 300px
+                        }
                         input {
                             flex: 1;
                             min-width: 100px;
